Fix mobile alignment of footer icons

--- a/src/App.css
+++ b/src/App.css
@@ -186,7 +186,6 @@ textarea.textarea {
   margin-top: 2rem;
 }
 
-.margin-left {
-  margin-left: 4rem;
+.icon-padding {
+  padding: 0 8rem;
 }
-
